# mcp_calculator

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_ACCOUNT_SWITCH.md  README.md  client_example.py  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
mcp_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_server/: __init__.py  logging_config.py  main.py  protocol.py  server.py  tools.py
scripts/: run_dev.sh
tests/: test_server.py  test_tools.py
