[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-calculator"
version = "0.1.0"
description = "Beginner-friendly MCP calculator server"
authors = [{name = "Muhammad Khubaib"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
