[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-calculator"
version = "0.1.0"
description = "MCP calculator server using official SDK"
authors = [{name = "Muhammad Khubaib"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-calculator = "mcp_server.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
