[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-calculator"
version = "0.2.0"
description = "FastMCP-based calculator server with HTTP/SSE transport for containerized deployments"
authors = [{name = "Muhammad Khubaib"}]
requires-python = ">=3.10"
keywords = ["mcp", "fastmcp", "calculator", "server", "http", "sse", "docker", "container"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastmcp>=3.0.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-calculator = "fastmcp.cli:run_mcp_server"

[project.entry-points."fastmcp.servers"]
calculator = "mcp_server.server:mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
